# repo-factory

./: .biome.json  .cspell.config.yaml  .editorconfig  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  .yamllint  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/terminal-output-fallback/: SKILL.md
.cspell/: custom-dictionary-workspace.txt
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  copilot-instructions.md
.github/actions/populate-pr-description/: action.yml  populate.py
.github/workflows/: conventional-commits.yml  create-repo.yml  lint-workflows.yml  lint.yml  populate-pr-description.yml
docs/: ai-instructions.md
scripts/: create_repo.sh
templates/python-app/: README.md.jinja  copier.yaml  pyproject.toml.jinja
templates/python-app/.github/workflows/: ci.yml.jinja
templates/python-app/src/{{ project_slug }}/: __main__.py.jinja  main.py.jinja
templates/python-app/tests/: test_import.py.jinja
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/: .gitignore
terraform/modules/github_repo/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
tests/: test_dummy_success.py  test_template.py
