# repo-factory's own Python configuration.
# This file exists only to declare test/dev dependencies; the project itself
# is primarily Terraform, not a Python package.

[project]
name = "repo-factory"
version = "0.1.0"
description = "GitHub repository factory using Copier and Terraform"
requires-python = ">=3.14"
dependencies = []

[tool.uv]
# This project has no installable Python package — uv should only manage
# the dev dependencies declared below.
package = false

[dependency-groups]
dev = [
    "copier>=9",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
